--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
 <head>
 	<title>Pinterest</title>
+	<!--Fontawesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/sass/_style.scss">
 	<link rel="stylesheet" type="text/css" href="dist/css/style.min.css">
 </head>
 <body>
+	<section>
+		<nav>
+			<div class="container-fluid">
+				<img src="img/logo.png" class="logo">
+				<p class="inicio">Inicio</p>
+				<img class="search" src="img/search.png"><input type="text" name="input" class="input" placeholder=""><a href="#" class="x">X</a>
+			</div>
+		</nav>
+	</section>
 
 </body>
 </html>
