--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
 	<section>
 		<nav>
-			<div class="container-fluid">
+			<div class="col-md-12 col-lg-12">
 				<img src="img/logo.png" class="logo">
 				<p class="inicio">Inicio</p>
 				<img class="search" src="img/search.png"><input type="text" name="input" class="input" placeholder=""><a href="#" class="x">X</a>
+				<a href="#" class="v">Todos los Pines <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+				<a href="#"><img src="img/user.png" class="person"></a><p class="inicio lupe"> Lupita</p>
+				<a href="#"><i class="fa fa-bars barss" aria-hidden="true"></i></a>
+				<a href="#"><img src="img/chats.png" class="logo chats"></a>
 			</div>
 		</nav>
 	</section>
