--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
 	<!-- Opciones -->
 	<section class="opciones">
 		<div class="col-md-12 col-lg-12 cajaOpciones">
-			<a href="#" class="opciones op1">Dress</a>
-			<a href="#" class="opciones op2">San Migel De Allende</a>
-			<a href="#" class="opciones op3">Friki</a>
-			<a href="#" class="opciones op4">Invitaciones</a>
-			<a href="#" class="opciones op5">Fotography</a>
-			<a href="#" class="opciones op6">Photocall</a>
-			<a href="#" class="opciones op7">Damas</a>
-			<a href="#" class="opciones op8">Ilumination</a>
-			<a href="#" class="opciones op9">Ramo</a>
-			<a href="#" class="opciones op10">Souvenires</a>
-			<a href="#" class="opciones op11">Invitación</a>
+			<a href="#"><img src="img/opciones/dress.png" class="imgBtn"></a>
+			<a href="#"><img src="img/opciones/sanMiguel.png" class="imgBtn"></a>
+			<a href="#"><img src="img/opciones/friki.png" class="imgBtn"></a>
+			<a href="#"><img src="img/opciones/invitaciones.png" class="imgBtn"></a>
+			<a href="#"><img src="img/opciones/fotography.png" class="imgBtn"></a>
+			<a href="#"><img src="img/opciones/photocall.png" class="imgBtn"></a>
+			<a href="#"><img src="img/opciones/damas.png" class="imgBtn"></a>
+			<a href="#"><img src="img/opciones/ilumination.png" class="imgBtn"></a>
+			<a href="#"><img src="img/opciones/ramo.png" class="imgBtn"></a>
+			<a href="#"><img src="img/opciones/souvenirs.png" class="imgBtn"></a>
 			<a href="#" class="opciones op12"><i class="fa fa-chevron-right" aria-hidden="true"></i></a>
 		</div>
 	</section>
