--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
 		</div>
 	</section>
 	<!-- Fin Opciones -->
-
+	<!-- Json -->
+	<section>
+		<div id="json">
+			
+		</div>
+	</section>
+	<!-- Fin Json -->
+	<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
