--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 		</div>
 	</section>
 	<!-- Fin Json -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script src="dist/js/script.js"></script>
 	<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
