--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
 	</section>
 	<!-- Fin Opciones -->
 	<!-- Json -->
-	<section>
-		<div id="json">
+	<section class="json">
+		<div class="col-5">
+			<div id="json">
 			
-		</div>
+			</div>	
+		</div>			
 	</section>
 	<!-- Fin Json -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
