--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 		</div>			
 	</section>
 	<!-- Fin Json -->
+	<!-- aqui va el modal oculto -->
+	<div id="modal" class="hide">
+    <!-- Aca van el modal dinamico -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src="dist/js/script.js"></script>
 	<script type="text/javascript" src="assets/js/main.js"></script>
