No funciona T.T no me toman los estilos ni los id del div creado con jQuery

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<!-- Fin Opciones -->
 	<!-- Json -->
 	<section class="json">
-		<div class="col-5">
+		<div class="col-12">
 			<div id="json">
 			
 			</div>	
@@ -48,7 +48,7 @@
 	</section>
 	<!-- Fin Json -->
 	<!-- aqui va el modal oculto -->
-	<div id="modal" class="hide">
+	<div id="modal" class="hide"></div>
     <!-- Aca van el modal dinamico -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src="dist/js/script.js"></script>
