--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 	<!-- Fin Opciones -->
 	<!-- Json -->
 	<section class="json">
-		<div class="col-12">
-			<div id="json">
+		<div>
+			<div id="json" class="col-10">
 			
 			</div>	
 		</div>			
